<resources>
    <string name="app_name">College Scheduler</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="class_schedule_info">Class Schedule Info</string>
    <string name="assignments">Assignments</string>
    <string name="exams">Exams</string>
    <string name="to_do_list">To-Do List</string>
    <string name="save">Save</string>
    <string name="pick_time">Time</string>
    <string name="pick_date">Date</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="new_event">New Event</string>
</resources>
